major rewrite to speed things up

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="viewport" content="width=device-width,  minimum-scale=1.0, maximum-scale=1.0" />
         <title>Augmented.js - Example Playground</title>
-        
-        <link href='https://fonts.googleapis.com/css?family=Work+Sans:300,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="styles/main.css" title="Default Style"/>
-
         <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+        <!--
         <script data-main="scripts/app/playgroundRequire.js" src="scripts/lib/require.js"></script>
+        -->
+        <script data-main="scripts/app/playgroundRequire-built.js" src="scripts/lib/require.js"></script>
 	</head>
 	<body>
         <article>
@@ -23,6 +23,7 @@
 			<section id="main">
                 <div class="container">
                     <p>Here are some examples of various design concepts in Augmented.js.</p>
+                    <progress id="progress"></progress>
                     <div id="apps"></div>
                 </div>
 			</section>
